--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RicciFilmStudios – Talent Search</title>
+  <title>RicciFilmStudios â€“ Talent Search</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,10 +14,12 @@
       background-color: #fff;
     }
     header {
-      background: #000;
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
+  background: linear-gradient(135deg, #000000, #444444);
+  color: #fff;
+  padding: 40px 20px;
+  text-align: center;
+}
+
     }
     header h1 {
       margin: 0;
@@ -84,7 +86,7 @@
     form button {
       margin-top: 20px;
       padding: 12px 20px;
-      background: #000;
+      background: #0044cc;
       color: #fff;
       border: none;
       border-radius: 4px;
@@ -92,7 +94,7 @@
       cursor: pointer;
     }
     form button:hover {
-      background: #444;
+      background: #0044cc;
     }
     /* Justify the agreement paragraph below the form */
     .application-form p {
@@ -100,6 +102,24 @@
       margin-top: 15px;
       font-size: 0.9em;
       color: #555;
+    }
+    /* Style for the website link */
+    .website-link {
+      text-align: center;
+      margin-top: 25px;
+    }
+    .website-link a {
+      display: inline-block;
+      padding: 12px 20px;
+      background: #000;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .website-link a:hover {
+      background: #b30000;
     }
     footer {
       text-align: center;
@@ -113,15 +133,15 @@
 <body>
   <header>
     <h1>RicciFilmStudios</h1>
-    <p>Established 2020 | Los Angeles, CA</p>
+    <p>Established 2024 | Los Angeles, CA</p>
   </header>
 
   <div class="container">
     <section class="intro">
       <h2>Join Our Global Talent Search</h2>
       <p>
-        At RicciFilmStudios, we’re on the lookout for fresh, dynamic talent from around the world.
-        Whether you’re a model, an actor, or both — if you’re passionate, driven, and ready to shine on camera — we want to hear from you.
+        At RicciFilmStudios, weâ€™re on the lookout for fresh, dynamic talent from around the world.
+        Whether youâ€™re a model, an actor, or both â€” if youâ€™re passionate, driven, and ready to shine on camera â€” we want to hear from you.
       </p>
       <p>
         We believe in discovering new faces everywhere, offering opportunities across modelling and acting for projects based in Los Angeles and internationally.
@@ -164,12 +184,20 @@
 
         <button type="submit">Submit Application</button>
       </form>
+
       <p>By submitting this form you agree to RicciFilmStudios contacting you regarding opportunities and talent submissions.</p>
+
+      <!-- ðŸŒ Added website link -->
+      <div class="website-link">
+        <a href="https://courage.studio/" target="_blank">
+          Courage Studio Italy 
+        </a>
+      </div>
     </section>
   </div>
 
   <footer>
-    <p>RicciFilmStudios · Los Angeles, CA · © 2020–2025</p>
+    <p>RicciFilmStudios Â· Los Angeles, CA Â· Â© 2020â€“2025</p>
   </footer>
 </body>
 </html>
