--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RicciFilmStudios â€“ Talent Search</title>
+  <title>RicciFilmStudios Talent Search</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -202,3 +202,4 @@
 </body>
 
 </html>
+
