--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>RicciFilmStudios – Talent Search</title>
+<title>RicciFilmStudios â€“ Talent Search</title>
 <style>
   /* Reset & basics */
   * {
@@ -285,7 +285,7 @@
     <h2>About RicciFilmStudios</h2>
     <p><strong>Established in 2025 in Los Angeles, California,</strong> RicciFilmStudios is a cutting-edge talent agency dedicated to discovering and nurturing exceptional models and actors worldwide.</p>
     <p>We specialize in creating opportunities that empower fresh faces and seasoned professionals alike, connecting them with exciting projects both locally and internationally. Our mission is to shape careers with passion, professionalism, and unmatched dedication.</p>
-    <p><em>We believe every talent has a story worth telling — and we want to tell yours.</em></p>
+    <p><em>We believe every talent has a story worth telling â€” and we want to tell yours.</em></p>
   </section>
 
   <!-- Partners -->
@@ -338,27 +338,27 @@
     <h2>Testimonials</h2>
     <div class="cards">
       <div class="card">
-        <img src="Ashley Dean 1.jpg" alt="Ashley Dean" />
+        <img src="1.jpg" alt="Ashley Dean" />
         <h3>Ashley Dean</h3>
         <p>"RicciFilmStudios helped me launch my modeling career with confidence and professionalism."</p>
       </div>
       <div class="card">
-        <img src="Savannah 2.jpg" alt="Savannah" />
+        <img src="2.jpg" alt="Savannah" />
         <h3>Savannah</h3>
         <p>"The opportunities and support here are unmatched. Truly life-changing."</p>
       </div>
       <div class="card">
-        <img src="Kaitlyn 3.jpg" alt="Kaitlyn" />
+        <img src="3.jpg" alt="Kaitlyn" />
         <h3>Kaitlyn</h3>
         <p>"A nurturing environment for new talent to grow and shine."</p>
       </div>
       <div class="card">
-        <img src="Brittany 4.jpg" alt="Brittany" />
+        <img src="4.jpg" alt="Brittany" />
         <h3>Brittany</h3>
         <p>"Professional, supportive, and truly passionate about talent."</p>
       </div>
       <div class="card">
-        <img src="Jennifer 5.jpg" alt="Jennifer" />
+        <img src="5.jpg" alt="Jennifer" />
         <h3>Jennifer</h3>
         <p>"Joining RicciFilmStudios was the best decision of my career."</p>
       </div>
@@ -424,4 +424,5 @@
   &copy; 2025 RicciFilmStudios. All rights reserved.
 </footer>
 </body>
+
 </html>
