--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email us at: <a href="mailto:marcoriccifilms@gmail.com">marcoriccifilms@gmail.com</a></p>
+    <p>Email us at: <a href="mailto:riccifilmsstudio@mbox.re">riccifilmsstudio@mbox.re</a></p>
   </section>
 </div>
 
@@ -425,3 +425,4 @@
 </footer>
 </body>
 </html>
+
