--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   <!-- Become Model Form -->
   <section id="become-model">
     <h2>Become a Model</h2>
-    <form action="mailto:marcoriccifilms@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:riccifilmsstudio@mbox.re" method="post" enctype="text/plain">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="Name" required />
 
@@ -425,4 +425,5 @@
 </footer>
 </body>
 </html>
+
 
