--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <h2>Testimonials</h2>
     <div class="cards">
       <div class="card">
-        <img src="1.jpg" alt="Ashley Dean" />
+        <img src="1.jpg" alt="Phi" />
         <h3>Ashley Dean</h3>
         <p>"RicciFilmStudios helped me launch my modeling career with confidence and professionalism."</p>
       </div>
@@ -425,5 +425,6 @@
 </footer>
 </body>
 </html>
+
 
 
