--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <div class="cards">
       <div class="card">
         <img src="1.jpg" alt="Phi" />
-        <h3>Ashley Dean</h3>
+        <h3>Phi</h3>
         <p>"RicciFilmStudios helped me launch my modeling career with confidence and professionalism."</p>
       </div>
       <div class="card">
@@ -425,6 +425,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
