--- a/index.html
+++ b/index.html
@@ -228,6 +228,15 @@
     font-size: 0.95rem;
     color: #555;
   }
+#our-models .card img {
+  width: 100%;
+  max-width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto 10px;
+  display: block;
+}
 
   /* Contact */
   #contact {
@@ -485,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
