--- a/index.html
+++ b/index.html
@@ -352,13 +352,13 @@
         <p>"RicciFilmStudios helped me launch my modeling career with confidence and professionalism."</p>
       </div>
       <div class="card">
-        <img src="2.jpg" alt="Savannah" />
-        <h3>Savannah</h3>
+        <img src="2.jpg" alt="Brittany Arkansas" />
+        <h3>Savannah Arkansas</h3>
         <p>"The opportunities and support here are unmatched. Truly life-changing."</p>
       </div>
       <div class="card">
-        <img src="3.jpg" alt="Kaitlyn" />
-        <h3>Kaitlyn</h3>
+        <img src="3.jpg" alt="Wangechi Kenya" />
+        <h3>Wangechi Kenya</h3>
         <p>"A nurturing environment for new talent to grow and shine."</p>
       </div>
       <div class="card">
@@ -494,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
