--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
     <div class="cards">
       <div class="card">
         <img src="1.jpg" alt="Phi" />
-        <h3>Phi</h3>
+        <h3>Phi Phillipines</h3>
         <p>"RicciFilmStudios helped me launch my modeling career with confidence and professionalism."</p>
       </div>
       <div class="card">
@@ -363,12 +363,12 @@
       </div>
       <div class="card">
         <img src="4.jpg" alt="Brittany" />
-        <h3>Brittany</h3>
+        <h3>Brittany Texas</h3>
         <p>"Professional, supportive, and truly passionate about talent."</p>
       </div>
       <div class="card">
         <img src="5.jpg" alt="Jennifer" />
-        <h3>Jennifer</h3>
+        <h3>Jennifer Florida</h3>
         <p>"Joining RicciFilmStudios was the best decision of my career."</p>
       </div>
     </div>
@@ -385,12 +385,12 @@
       </div>
       <div class="card">
         <img src="2.jpg" alt="Model 2" />
-        <h3> Savannah</h3>
+        <h3> Brittany</h3>
         <p>Known for versatile talent and runway presence.</p>
       </div>
       <div class="card">
         <img src="3.jpg" alt="Model 3" />
-        <h3>Kaitlyn</h3>
+        <h3>Wangechi</h3>
         <p>Representing RicciFilmStudios in international shows.</p>
       </div>
       <div class="card">
@@ -494,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
