--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       </div>
       <div class="card">
         <img src="2.jpg" alt="Brittany Arkansas" />
-        <h3>Savannah Arkansas</h3>
+        <h3>Brittany Arkansas</h3>
         <p>"The opportunities and support here are unmatched. Truly life-changing."</p>
       </div>
       <div class="card">
@@ -494,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
