--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email us at: <a href="mailto:riccifilmsstudio@mbox.re">riccifilmsstudio@mbox.re</a></p>
+    <p>Email us at: <a href="riccifilm@mbox.re">riccifilm@mbox.re>/a></p>
   </section>
 </div>
 
@@ -494,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
