--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <!-- Become Model Form -->
   <section id="become-model">
     <h2>Become a Model</h2>
-    <form action="mailto:riccifilmsstudio@mbox.re" method="post" enctype="text/plain">
+    <form action="mailto:riccifilm@mbox.re" method="post" enctype="text/plain">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="Name" required />
 
@@ -494,6 +494,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
