--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
   <!-- Become Model Form -->
   <section id="become-model">
     <h2>Become a Model</h2>
-    <form action="mailto:riccifilm@mbox.re" method="post" enctype="text/plain">
+    <form action="mailto:riccifilm@protonmail.com" method="post" enctype="text/plain">
       <label for="name">Full Name:</label>
       <input type="text" id="name" name="Name" required />
 
@@ -437,7 +437,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email us at: <a href="riccifilm@mbox.re">riccifilm@mbox.re</a></p>
+    <p>Email us at: <a href="riccifilm@protonmail.com">riccifilm@protonmail.com</a></p>
   </section>
 </div>
 
@@ -494,4 +494,5 @@
 </footer>
 </body>
 </html>
+
 
