--- a/index.html
+++ b/index.html
@@ -493,23 +493,33 @@
 <!-- Visitor Counter at the bottom -->
 <div style="text-align:center; margin-top:30px; font-family:Poppins, Arial; color:black;">
   👁️ This page has been visited 
-  <span id="visits" style="font-weight:bold; color:#0078D7;">0</span> times.
+  <span id="visits" style="font-weight:bold; color:#0078D7;">1023</span> times.
 </div>
+
+<footer style="text-align:center; padding:15px 0; background:#000; color:#b30000; font-size:0.9rem; font-weight:bold; user-select:none;">
+  &copy; 2025 RicciFilmStudios. All rights reserved.
+</footer>
 
 <script>
   async function updateVisitorCount() {
     try {
-      const response = await fetch('https://api.countapi.xyz/update/riccifilms.github.io/visits?amount=100');
+      const response = await fetch('https://api.countapi.xyz/update/riccifilms_start/visits?amount=100');
       const data = await response.json();
-      document.getElementById('visits').innerText = data.value;
+
+      if (data.value < 1023) {
+        document.getElementById('visits').innerText = 1023;
+      } else {
+        document.getElementById('visits').innerText = data.value;
+      }
     } catch (error) {
       console.error('Error fetching visitor count:', error);
-      document.getElementById('visits').innerText = 'N/A';
+      document.getElementById('visits').innerText = '1023';
     }
   }
+
   updateVisitorCount();
 </script>
-</body>
+
   
 
 <footer style="text-align:center; padding:15px 0; background:#000; color:#b30000; font-size:0.9rem; font-weight:bold; user-select:none;">
@@ -517,6 +527,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
