--- a/index.html
+++ b/index.html
@@ -490,24 +490,53 @@
 <!-- Add this right before </body> -->
 <!-- Page content -->
 
-<!-- Visitor Counter -->
-<div style="text-align:center; margin-top:30px; font-family:Poppins, Arial; color:black;">
-  👁️ This page has been visited 
-  <span id="visits" style="font-weight:bold; color:#0078D7;">1023</span> times.
-</div>
+<!-- Bottom Section: Locations + Models Selected + Visitor Counter -->
+<section style="text-align:center; padding:50px 20px; background:#1a1a1a; color:#fff; font-family:Poppins, Arial;">
+  
+  <!-- Locations -->
+  <h2 style="font-size:2rem; margin-bottom:15px; color:#fff;">We are present all over the world</h2>
+  <p style="font-size:1.1rem; margin-bottom:30px; color:#ccc;">
+    Italy, France, Nigeria, Kenya, UK, Indonesia
+  </p>
+  <iframe 
+    src="https://www.google.com/maps/d/embed?mid=1Z8zYzUd2X8X4g1gkXvRZ9zJ0NlM&hl=en" 
+    width="80%" 
+    height="400" 
+    style="border:0; margin-bottom:40px;" 
+    allowfullscreen="" 
+    loading="lazy">
+  </iframe>
+  
+  <!-- Models Selected Counter -->
+  <h2 style="font-size:2rem; margin-bottom:10px; color:#fff;">So far our models selected</h2>
+  <p class="blinking-number" style="font-size:2.5rem; font-weight:bold; color:#00aaff; margin-bottom:40px;">261</p>
+  
+  <!-- Visitor Counter -->
+  <div style="font-size:1.2rem; color:#fff;">
+    👁️ This page has been visited 
+    <span id="visits" style="font-weight:bold; color:#00aaff;">1023</span> times.
+  </div>
+</section>
 
-<footer style="text-align:center; padding:15px 0; background:#000; color:#b30000; font-size:0.9rem; font-weight:bold; user-select:none;">
-  &copy; 2025 RicciFilmStudios. All rights reserved.
-</footer>
+<!-- Blinking Animation CSS -->
+<style>
+  @keyframes blink {
+    0%, 49% { opacity: 1; }
+    50%, 100% { opacity: 0; }
+  }
 
+  .blinking-number {
+    animation: blink 1s infinite; /* Blink every second */
+  }
+</style>
+
+<!-- Visitor Counter Script -->
 <script>
   async function updateVisitorCount() {
     try {
-      // Step 1: Try to increment by 100
       let response = await fetch('https://api.countapi.xyz/update/riccifilms_start/visits?amount=100');
       let data = await response.json();
 
-      // Step 2: If the key didn’t exist yet, initialize it to 1023
       if (data.value < 1023) {
         await fetch('https://api.countapi.xyz/set/riccifilms_start/visits?value=1023');
         document.getElementById('visits').innerText = 1023;
@@ -524,10 +553,12 @@
   updateVisitorCount();
 </script>
 
+
   
 </footer>
 </body>
 </html>
+
 
 
 
