--- a/index.html
+++ b/index.html
@@ -490,32 +490,29 @@
 <!-- Add this right before </body> -->
 <!-- Page content -->
 
-<!-- Bottom Section: Locations + Models Selected + Visitor Counter -->
+<!-- Bottom Section: Locations + Models Selected + Visitor Counter + Footer -->
 <section style="text-align:center; padding:50px 20px; background:#1a1a1a; color:#fff; font-family:Poppins, Arial;">
   
   <!-- Locations -->
   <h2 style="font-size:2rem; margin-bottom:15px; color:#fff;">We are present all over the world</h2>
-  <p style="font-size:1.1rem; margin-bottom:30px; color:#ccc;">
+  <p style="font-size:1.2rem; margin-bottom:40px; color:#ccc;">
     Italy, France, Nigeria, Kenya, UK, Indonesia
   </p>
-  <iframe 
-    src="https://www.google.com/maps/d/embed?mid=1Z8zYzUd2X8X4g1gkXvRZ9zJ0NlM&hl=en" 
-    width="80%" 
-    height="400" 
-    style="border:0; margin-bottom:40px;" 
-    allowfullscreen="" 
-    loading="lazy">
-  </iframe>
   
   <!-- Models Selected Counter -->
   <h2 style="font-size:2rem; margin-bottom:10px; color:#fff;">So far our models selected</h2>
   <p class="blinking-number" style="font-size:2.5rem; font-weight:bold; color:#00aaff; margin-bottom:40px;">261</p>
   
   <!-- Visitor Counter -->
-  <div style="font-size:1.2rem; color:#fff;">
+  <div style="font-size:1.2rem; color:#fff; margin-bottom:20px;">
     👁️ This page has been visited 
     <span id="visits" style="font-weight:bold; color:#00aaff;">1023</span> times.
   </div>
+  
+  <!-- Footer -->
+  <footer style="font-size:0.9rem; color:#b30000; font-weight:bold; margin-top:20px; user-select:none;">
+    &copy; 2025 RicciFilm Studios. All rights reserved.
+  </footer>
 </section>
 
 <!-- Blinking Animation CSS -->
@@ -554,10 +551,12 @@
 </script>
 
 
+
   
 </footer>
 </body>
 </html>
+
 
 
 
