--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
   <!-- Locations -->
   <h2 style="font-size:2rem; margin-bottom:15px; color:#fff;">We are present all over the world</h2>
   <p style="font-size:1.2rem; margin-bottom:40px; color:#ccc;">
-    Italy, France, Nigeria, Kenya, UK, Indonesia
+    United States, Italy, France, Nigeria, Kenya, UK, Indonesia
   </p>
   
   <!-- Models Selected Counter -->
@@ -556,6 +556,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
