--- a/index.html
+++ b/index.html
@@ -490,64 +490,129 @@
 <!-- Add this right before </body> -->
 <!-- Page content -->
 
-<!-- Bottom Section: Locations + Models Selected + Visitor Counter + Footer -->
+<!-- Bottom Section: Global Presence + Stats + Visitor Counter + Footer -->
 <section style="text-align:center; padding:50px 20px; background:#1a1a1a; color:#fff; font-family:Poppins, Arial;">
-  
-  <!-- Locations -->
+
+  <!-- Global Presence -->
   <h2 style="font-size:2rem; margin-bottom:15px; color:#fff;">We are present all over the world</h2>
   <p style="font-size:1.2rem; margin-bottom:40px; color:#ccc;">
-    United States, Italy, France, Nigeria, Kenya, UK, Indonesia
+    Italy, France, Nigeria, Kenya, UK, Indonesia, United States
   </p>
-  
-  <!-- Models Selected Counter -->
-  <h2 style="font-size:2rem; margin-bottom:10px; color:#fff;">So far our models selected</h2>
-  <p class="blinking-number" style="font-size:2.5rem; font-weight:bold; color:#00aaff; margin-bottom:40px;">261</p>
-  
+
+  <!-- Stats Section -->
+  <div style="display:flex; justify-content:center; gap:40px; flex-wrap:wrap; margin-bottom:40px;">
+    <div>
+      <p class="animated-number" data-value="432" style="font-size:2.5rem; font-weight:bold; color:#00aaff;">0</p>
+      <p>Models Selected</p>
+    </div>
+    <div>
+      <p class="animated-number" data-value="1065" style="font-size:2.5rem; font-weight:bold; color:#00ff99;">0</p>
+      <p>Clients Served</p>
+    </div>
+    <div>
+      <p class="animated-number" data-value="265" style="font-size:2.5rem; font-weight:bold; color:#ff9900;">0</p>
+      <p>Studios Worldwide</p>
+    </div>
+    <div>
+      <p class="animated-number" data-value="3744" style="font-size:2.5rem; font-weight:bold; color:#ff33cc;">0</p>
+      <p>Collaborations</p>
+    </div>
+    <div>
+      <p class="animated-number" data-value="343" style="font-size:2.5rem; font-weight:bold; color:#ffff00;">0</p>
+      <p>Awards Won</p>
+    </div>
+    <div>
+      <p class="animated-number" data-value="265" style="font-size:2.5rem; font-weight:bold; color:#00ffff;">0</p>
+      <p>Fashion Week Participation</p>
+    </div>
+  </div>
+
   <!-- Visitor Counter -->
   <div style="font-size:1.2rem; color:#fff; margin-bottom:20px;">
     👁️ This page has been visited 
-    <span id="visits" style="font-weight:bold; color:#00aaff;">1023</span> times.
+    <span id="visits" class="animated-number" style="font-weight:bold; color:#00aaff;">0</span> times.
   </div>
-  
+
   <!-- Footer -->
   <footer style="font-size:0.9rem; color:#b30000; font-weight:bold; margin-top:20px; user-select:none;">
     &copy; 2025 RicciFilm Studios. All rights reserved.
   </footer>
 </section>
 
-<!-- Blinking Animation CSS -->
+<!-- Blinking + Glow + Count-Up Animation CSS -->
 <style>
-  @keyframes blink {
-    0%, 49% { opacity: 1; }
-    50%, 100% { opacity: 0; }
+  @keyframes blink-glow {
+    0%, 49% { 
+      opacity: 1; 
+      text-shadow: 0 0 5px currentColor, 0 0 10px currentColor;
+    }
+    50%, 100% { 
+      opacity: 0.3; 
+      text-shadow: 0 0 2px currentColor, 0 0 5px currentColor;
+    }
   }
 
-  .blinking-number {
-    animation: blink 1s infinite; /* Blink every second */
+  .animated-number {
+    display: inline-block;
+    animation: blink-glow 1s infinite;
+    transition: transform 0.3s;
+  }
+
+  .animated-number:hover {
+    transform: scale(1.2);
   }
 </style>
 
-<!-- Visitor Counter Script -->
+<!-- Visitor Counter + Number Count-Up Script -->
 <script>
+  // Animate numbers from 0 to target
+  function animateNumber(element, target) {
+    let count = 0;
+    const increment = Math.ceil(target / 200); // speed
+    const interval = setInterval(() => {
+      count += increment;
+      if(count >= target) {
+        element.innerText = target;
+        clearInterval(interval);
+      } else {
+        element.innerText = count;
+      }
+    }, 10);
+  }
+
+  // Animate stats numbers
+  function animateStats() {
+    const numbers = document.querySelectorAll('.animated-number');
+    numbers.forEach(num => {
+      const target = parseInt(num.getAttribute('data-value')) || parseInt(num.innerText);
+      animateNumber(num, target);
+    });
+  }
+
+  // Visitor counter
   async function updateVisitorCount() {
     try {
       let response = await fetch('https://api.countapi.xyz/update/riccifilms_start/visits?amount=100');
       let data = await response.json();
+      let currentCount = data.value < 1023 ? 1023 : data.value;
+      const visitsElement = document.getElementById('visits');
+      animateNumber(visitsElement, currentCount);
 
-      if (data.value < 1023) {
+      // Set minimum 1023
+      if(data.value < 1023){
         await fetch('https://api.countapi.xyz/set/riccifilms_start/visits?value=1023');
-        document.getElementById('visits').innerText = 1023;
-      } else {
-        document.getElementById('visits').innerText = data.value;
       }
-
-    } catch (error) {
-      console.error('Error fetching visitor count:', error);
+    } catch(error) {
+      console.error('Visitor counter error:', error);
       document.getElementById('visits').innerText = '1023';
     }
   }
 
-  updateVisitorCount();
+  // On page load
+  window.addEventListener('load', () => {
+    animateStats();
+    updateVisitorCount();
+  });
 </script>
 
 
@@ -556,6 +621,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
