--- a/index.html
+++ b/index.html
@@ -442,55 +442,90 @@
 </div>
 
 <script>
-  // Navbar color change on scroll
-  const nav = document.getElementById('navbar');
-  window.addEventListener('scroll', () => {
-    if(window.scrollY > 50){
-      nav.classList.add('scrolled');
-    } else {
-      nav.classList.remove('scrolled');
+
+  <!-- Bottom Section: Global Presence + Stats + Visitor Counter + Footer -->
+<section style="text-align:center; padding:50px 20px; background:#1a1a1a; color:#fff; font-family:Poppins, Arial;">
+
+  <!-- Global Presence -->
+  <h2 style="font-size:2rem; margin-bottom:15px; color:#fff;">We are present all over the world</h2>
+  <p style="font-size:1.2rem; margin-bottom:40px; color:#ccc;">
+    Italy, France, Nigeria, Kenya, UK, Indonesia, United States
+  </p>
+
+  <!-- Stats Section -->
+  <div style="display:flex; justify-content:center; gap:40px; flex-wrap:wrap; margin-bottom:40px;">
+    <div>
+      <p class="animated-number neon" data-value="432" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Models Selected</p>
+    </div>
+    <div>
+      <p class="animated-number neon" data-value="1065" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Clients Served</p>
+    </div>
+    <div>
+      <p class="animated-number neon" data-value="265" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Studios Worldwide</p>
+    </div>
+    <div>
+      <p class="animated-number neon" data-value="3744" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Collaborations</p>
+    </div>
+    <div>
+      <p class="animated-number neon" data-value="343" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Awards Won</p>
+    </div>
+    <div>
+      <p class="animated-number neon" data-value="265" style="font-size:2.5rem; font-weight:bold; color:#ffffff;">0</p>
+      <p style="color:#ffffff;">Fashion Week Participation</p>
+    </div>
+  </div>
+
+  <!-- Visitor Counter -->
+  <div style="font-size:1.2rem; color:#fff; margin-bottom:20px;">
+    👁️ This page has been visited 
+    <span id="visits" class="animated-number neon" style="font-weight:bold; color:#00aaff;">0</span> times.
+  </div>
+
+  <!-- Footer -->
+  <footer style="font-size:0.9rem; color:#b30000; font-weight:bold; margin-top:20px; user-select:none;">
+    &copy; 2025 RicciFilm Studios. All rights reserved.
+  </footer>
+</section>
+
+<!-- Blinking + Neon Glow + Count-Up Animation CSS -->
+<style>
+  @keyframes blink-glow {
+    0%, 49% { 
+      opacity: 1; 
     }
-  });
-
-  // Smooth active link highlight in nav
-  const sections = document.querySelectorAll('section, #home');
-  const navLinks = document.querySelectorAll('nav ul li a');
-
-  function activateNavLink(){
-    let scrollPos = window.scrollY + 70; // offset for fixed navbar height
-    sections.forEach((section, idx) => {
-      if(scrollPos >= section.offsetTop && scrollPos < section.offsetTop + section.offsetHeight){
-        navLinks.forEach(link => link.classList.remove('active'));
-        navLinks[idx].classList.add('active');
-      }
-    });
-  }
-  window.addEventListener('scroll', activateNavLink);
-
-  // Slideshow logic for home
-  const slides = document.querySelectorAll('.slide');
-  const taglines = document.querySelectorAll('.tagline-text');
-  let currentSlide = 0;
-
-  function showSlide(index){
-    slides.forEach((slide,i) => {
-      slide.classList.toggle('active', i === index);
-    });
-    taglines.forEach((tag,i) => {
-      tag.classList.toggle('active', i === index);
-    });
+    50%, 100% { 
+      opacity: 0.3; 
+    }
   }
 
-  function nextSlide(){
-    currentSlide = (currentSlide + 1) % slides.length;
-    showSlide(currentSlide);
+  @keyframes neon-pulse {
+    0% { text-shadow: 0 0 5px #fff, 0 0 10px #00f, 0 0 20px #0ff, 0 0 30px #0ff; }
+    50% { text-shadow: 0 0 10px #fff, 0 0 20px #00f, 0 0 30px #0ff, 0 0 40px #0ff; }
+    100% { text-shadow: 0 0 5px #fff, 0 0 10px #00f, 0 0 20px #0ff, 0 0 30px #0ff; }
   }
-  setInterval(nextSlide, 7000);
-</script>
-<!-- Add this right before </body> -->
-<!-- Page content -->
 
- <script>
+  .animated-number {
+    display: inline-block;
+    animation: blink-glow 1s infinite;
+    transition: transform 0.3s;
+  }
+
+  .animated-number:hover {
+    transform: scale(1.2);
+  }
+
+  .neon {
+    animation: blink-glow 1s infinite, neon-pulse 2s infinite alternate;
+  }
+</style>
+
+<!-- Visitor Counter + Number Count-Up Loop Script -->
+<script>
   // Animate numbers from 0 to target repeatedly
   function animateNumberLoop(element, target) {
     let count = 0;
@@ -513,6 +548,7 @@
     loop();
   }
 
+  // Animate stats numbers
   function animateStatsLoop() {
     const numbers = document.querySelectorAll('.animated-number');
     numbers.forEach(num => {
@@ -521,6 +557,7 @@
     });
   }
 
+  // Visitor counter
   async function updateVisitorCountLoop() {
     try {
       let response = await fetch('https://api.countapi.xyz/update/riccifilms_start/visits?amount=100');
@@ -552,6 +589,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
